# pyckingsolver

./: .gitattributes  .gitignore  .gitmodules  README.md
.github/workflows/: build.yml
python/: README.md  pyproject.toml
python/packingsolver/: __init__.py  geometry.py  instance.py  solution.py  solver.py
python/pyckingsolver/: __init__.py  geometry.py  instance.py  solution.py  solver.py  types.py
python/test/: test_nesting.py  test_shapely_easy_use.py
test/: pyproject.toml  test_nesting.py  test_shapely_easy_use.py
